# example-model-serving

./: .env.example  .gitignore  README.md  pyproject.toml
example_model_serving/: config.py  main.py
